# analytics-engineering-sql-dbt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
analyses/: customer_classification.sql  most_valuable_customers.sql
docs/chapter_01/: README.md
docs/chapter_02/: README.md
docs/chapter_03/: README.md
docs/chapter_04/: README.md
docs/chapter_05/: README.md
docs/chapter_06/: README.md
macros/: get_column_values.sql  limit_data_in_dev.sql
models/marts/core/: _core_docs.md  _core_models.yml  dim_customers.sql  fct_orders.sql
models/marts/omnichannel/: _omnichannel_models.yml  dim_omni_channels.sql  dim_omni_customers.sql  dim_omni_products.sql  fct_purchase_history.sql  fct_visit_history.sql
models/staging/jaffle_shop/: _jaffle_shop_models.yml  _jaffle_shop_sources.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
models/staging/omnichannel/: _omnichannel_models.yml  _omnichannel_sources.yml  stg_omni__channels.sql  stg_omni__customers.sql  stg_omni__products.sql  stg_omni__purchase_history.sql  stg_omni__visit_history.sql
models/staging/stripe/: _stripe_models.yml  _stripe_sources.yml  (+1 more)
seeds/: customer_range_per_paid_amount.csv  raw_channels.csv  raw_omni_customers.csv  raw_orders.csv  raw_payments.csv  raw_products.csv  raw_purchase_history.csv  raw_visit_history.csv
snapshots/: snap_orders.sql
tests/: assert_gross_amount_is_positive.sql  assert_total_payment_amount_is_positive.sql  assert_visit_duration_is_positive.sql
